# advent-of-code

./: .gitignore  Cargo.toml  fetch.sh  generate.sh
2021/: Cargo.toml
2021/benches/: lib.rs
2021/input/: day10-extra-close.txt  day10-invalid-open.txt
2021/src/: day01.rs  day02.rs  day10.rs  main.rs
2022/: Cargo.toml
2022/benches/: day12.rs  day16.rs  lib.rs
2022/input/: day15-puzzle.txt  day15-sample.txt
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day21.rs  lib.rs  main.rs
2023/: Cargo.toml
2023/benches/: lib.rs
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day23.rs  lib.rs  main.rs
tmpl/: Cargo.toml
tmpl/input/: tmpl-puzzle.txt  tmpl-sample.txt
tmpl/src/: main.rs  tmpl.rs
utils/: Cargo.toml
utils/src/: lib.rs  prelude.rs
