[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
itertools = "0.10.5"
rustc-hash = "1.1.0"
serde_json = "1.0.91"
sscanf = "0.4.0"
utils = { path = "../utils" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "lib"
harness = false
