[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
sscanf = "0.4.0"
utils = { path = "../utils" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "lib"
harness = false
