[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
itertools = "0.12.0"
num = "0.4.1"
rustc-hash = "1.1.0"
sscanf = "0.4.0"
utils = { path = "../utils" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "lib"
harness = false
